Fixed Invisible Class Bug

--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,7 @@ body,
   height: 100%;
 }
 .invisible {
-  display: none;
+  display: none !important;
 }
 .greyBackground{
   background-color: #ebeff2;
